--- a/index.html
+++ b/index.html
@@ -49,7 +49,19 @@
 				        <h2>Pengenalan HTML6</h2>
 					</section>
 					<section>
-						<h2>Test</h2>
+						<h2>HTML 6 API</h2>
+						<ul>
+							<li>&#60html:html&#62</li>
+							<li>&#60html:head&#62</li>
+							<li>&#60html:title&#62</li>
+							<li>&#60html:meta&#62</li>
+							<li>&#60html:body&#62</li>
+							<li>&#60html:a&#62</li>
+							<li>&#60html:button&#62</li>
+							<li>&#60html:media&#62</li>
+
+
+						</ul>
 					</section>
 				</section>
 
@@ -58,7 +70,7 @@
 					<section>
 						<h2>Vertical Slides</h2>
 						<p>Slides can be nested inside of each other.</p>
-						<p>Use the <em>Space</em> key to navigate through all slides.</p>
+						<p>Use the <em>Space</em> key to navigate through all slids.</p>
 						<br>
 						<a href="#" class="navigate-down">
 							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
