--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
-						<h2>Vertical Slides</h2>
-						<p>Slides can be nested inside of each other.</p>
-						<p>Use the <em>Space</em> key to navigate through all slids.</p>
+						<h2>Pendahuluan</h2>
+						<p>HTML6 adalah HTML konseptual dengan XML seperti ruang nama. Jika Anda tidak tahu XML, atau tidak tahu apa ruang nama XML yang mereka pada dasarnya cara untuk memungkinkan Anda untuk menggunakan tag yang sama tanpa itu bertentangan dengan tag yang berbeda.</p>
+						
 						<br>
 						<a href="#" class="navigate-down">
 							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
