"Penambahan style pada html"

--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
 					<h2>Pengenalan Teknologi Baru HTML6</h2>
 				</section>
 
-				<section>
+				<section data-background="#4D86D1">
 					<section>
 				        <h2>Pengenalan HTML6</h2>
 					</section>
 					<section>
 						<h2>HTML 6 API</h2>
 						<ul>
-							<li>&#60html:html&#62</li>
-							<li>&#60html:head&#62</li>
-							<li>&#60html:title&#62</li>
-							<li>&#60html:meta&#62</li>
-							<li>&#60html:body&#62</li>
-							<li>&#60html:a&#62</li>
-							<li>&#60html:button&#62</li>
-							<li>&#60html:media&#62</li>
+							<li class="fragment">&#60html:html&#62</li>
+							<li class="fragment">&#60html:head&#62</li>
+							<li class="fragment">&#60html:title&#62</li>
+							<li class="fragment">&#60html:meta&#62</li>
+							<li class="fragment">&#60html:body&#62</li>
+							<li class="fragment">&#60html:a&#62</li>
+							<li class="fragment">&#60html:button&#62</li>
+							<li class="fragment">&#60html:media&#62</li>
 
 
 						</ul>
@@ -399,7 +399,7 @@ Reveal.addEventListener( 'customevent', function() {
 				history: true,
 				center: true,
 
-				transition: 'slide', // none/fade/slide/convex/concave/zoom
+				transition: 'concave', // none/fade/slide/convex/concave/zoom
 
 				// Optional reveal.js plugins
 				dependencies: [
