"Penambahan bahan presentasi"

--- a/index.html
+++ b/index.html
@@ -44,25 +44,44 @@
 					<h2>Pengenalan Teknologi Baru HTML6</h2>
 				</section>
 
-				<section data-background="#4D86D1">
+				<section data-background="#4D86D1" class="font-white">
 					<section>
-				        <h2>Pengenalan HTML6</h2>
+				        <h2>Introduction HTML6</h2>
 					</section>
+				</section>
+
+				<section data-background="#4D86D1" class="font-white">
+					<h2>The Concept</h2>
+				</section>
+
+				<section data-background="#4D86D1" class="font-white">
 					<section>
 						<h2>HTML 6 API</h2>
-						<ul>
-							<li class="fragment">&#60html:html&#62</li>
-							<li class="fragment">&#60html:head&#62</li>
-							<li class="fragment">&#60html:title&#62</li>
-							<li class="fragment">&#60html:meta&#62</li>
-							<li class="fragment">&#60html:body&#62</li>
-							<li class="fragment">&#60html:a&#62</li>
-							<li class="fragment">&#60html:button&#62</li>
-							<li class="fragment">&#60html:media&#62</li>
-
-
-						</ul>
+							<ul>
+								<li class="fragment">&#60html:html&#62</li>
+								<li class="fragment">&#60html:head&#62</li>
+								<li class="fragment">&#60html:title&#62</li>
+								<li class="fragment">&#60html:meta&#62</li>
+								<li class="fragment">&#60html:body&#62</li>
+								<li class="fragment">&#60html:a&#62</li>
+								<li class="fragment">&#60html:button&#62</li>
+								<li class="fragment">&#60html:media&#62</li>
+							</ul>
 					</section>
+				</section>
+				<section data-background="#4D86D1" class="font-white">
+					<h2>For HTML Head</h2>
+					<pre><code style="word-wrap: break-word;">&lt;html:head&gt;
+
+	&lt;html:title&gt;Title Here&lt;/html:title&gt;
+	&lt;html:meta type="description" value="description here"&gt;
+	&lt;html:link src="style.css" type="text/css"&gt;
+
+&lt;/html:head&gt;</code></pre>
+				</section>
+
+				<section data-background="#4D86D1" class="font-white">
+					<h2>Tag Types</h2>
 				</section>
 
 				<!-- Example of nested vertical slides -->
@@ -114,23 +133,6 @@
 					</p>
 				</section>
 
-				<section data-markdown>
-					<script type="text/template">
-						## Markdown support
-
-						Write content using inline or external Markdown.
-						Instructions and more info available in the [readme](https://github.com/hakimel/reveal.js#markdown).
-
-						```
-						<section data-markdown>
-						  ## Markdown support
-
-						  Write content using inline or external Markdown.
-						  Instructions and more info available in the [readme](https://github.com/hakimel/reveal.js#markdown).
-						</section>
-						```
-					</script>
-				</section>
 
 				<section>
 					<section id="fragments">
