Penambahan index.html

--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
 				</section>
 
 				<section>
-					<h2>Slides</h2>
+					<h2>HTML Forms API</h2>
 					<p>
-						Not a coder? Not a problem. There's a fully-featured visual editor for authoring these, try it out at <a href="http://slides.com" target="_blank">http://slides.com</a>.
+						Bentuk HTML terpisah dari HTML API untuk memungkinkan pengembangan bentuk untuk tidak harus memperlambat untuk HTML seluruh spec. Bentuk senantiasa berkembang dengan Sliders, pemetik warna, tanggal dan waktu pemetik, progress bar dan banyak lagi. Bentuk benar-benar semacam mereka sendiri "hal" dalam HTML, sehingga dalam HTML6 kita sudah rusak mereka ke API mereka sendiri.
 					</p>
 				</section>
 
