Contoh Penggunaan <html:body>

--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
 						
 					</section>
 					<section>
+						<h2></h2>
+						<h2>Penggunaan &#60html:body&#62</h2>
+
+						<img src="img/body.png" style="width: 750px; height=350px "/>
+						
+					</section>
+					<section>
 						<h2>Basement Level 2</h2>
 						<p>That's it, time to go back up.</p>
 						<br>
