"Penambahan bahan presentasi"

--- a/index.html
+++ b/index.html
@@ -47,7 +47,30 @@
 				<section data-background="#4D86D1" class="font-white">
 					<section>
 				        <h2>Introduction HTML 6</h2>
-				        
+					</section>
+				</section>
+
+				<section data-background="#4D86D1" class="font-white">
+					<section>
+				        <h2>Kelebihan pada HTML 6</h2>
+					</section>
+					<section>
+						<h3>Lebih dapat mengontrol objek video</h3>
+					</section>
+					<section>
+						<h3>Perbaikan pada tampilan citra responsif</h3>
+					</section>
+					<section>
+						<h3>Bahasa yang lebih pluggable</h3>
+					</section>
+					<section>
+						<h3>Libraries yang lebih terjamin</h3>
+					</section>
+					<section>
+						<h3>Terintegrasi dengan kamera</h3>
+					</section>
+					<section>
+						<h3>Jenis Autentikasi yang lebih beragam</h3>
 					</section>
 				</section>
 
