--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
 					</code></pre>
 				</section>
 
+				<section data-background="#4D86D1">
+					<h2 style="color:white">Sekian dan terima kasih</h2>
+				</section>
 			</div>
 
 		</div>
